--- a/src/css/design.css
+++ b/src/css/design.css
@@ -1,6 +1,6 @@
 .line {
-    color:brown;
+    color:rgb(165, 87, 42);
     font-size:150px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-shadow: 10px 6px 9px rgb(124, 49, 49);
+    text-shadow: 10px 6px 9px rgb(237, 118, 118);
 }
